--- a/source/_data/theme.yml
+++ b/source/_data/theme.yml
@@ -44,13 +44,13 @@ social_links:
 e_social:
   enable: true
 e_social_links:
-  Google Scholar: / || fas fa-graduation-cap
+  Google Scholar: https://scholar.google.com/citations?user=yVSjCCcAAAAJ&hl=zh-CN || fas fa-graduation-cap
   ORCID: / || fab fa-orcid
 
 # CV download link
 cv_dl:
   enable: true
-  dir: /attaches/byfCV2.pdf
+  dir: /attaches/byfCVnew.pdf
   description: My Detail CV.
 
 # Box-shadow
